# gherkin

./: .editorconfig  .markdownlint.json  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml
src/: ast_checker.rs  feature.pest  keywords.rs  languages.json  lib.rs  parser.rs  tagexpr.pest  tagexpr.rs  test.feature
tests/: bad.rs  cucumber.rs  test.feature
tests/features/: de.feature  main.feature  no.feature
tests/fixtures/data/good/: escaped_pipes.feature  feature_with_comment.feature  feature_with_comment.feature.ast.ndjson  feature_with_comment_and_tag.feature  feature_with_comment_and_tag.feature.ast.ndjson  feature_with_tag.feature  feature_with_tag.feature.ast.ndjson  i18n_fr.feature
